--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<a routerLink="/homepage">This is a link but not workign</a>
+<button pButton label="Primary"></button>
+<p-button label="Secondary" severity="secondary" />
+<p-button label="Success" severity="success" />
+<p-button label="Info" severity="info" />
+<p-button label="Warn" severity="warn" />
+<p-button label="Help" severity="help" />
+<p-button label="Danger" severity="danger" />
+<p-button label="Contrast" severity="contrast" />
 
 <router-outlet />
