--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,23 +1,23 @@
-<!-- @if(isAdmin()){
-  <h1>Welcome admin</h1>
-} -->
-<nav>
+<header>
   <p class="logo">Logo</p>
-  <ul>
-    <li>
-      <a routerLink="home" routerLinkActive="active">My account</a>
-    </li>
-    <li>
-      <a routerLink="transactions" routerLinkActive="active">Transactions</a>
-    </li>
-    @if(isAdmin()){
+  <nav>
+    <ul>
       <li>
-        <a routerLink="admin-panel" routerLinkActive="active">Admin panel</a>
+        <a routerLink="home" routerLinkActive="active">My account</a>
       </li>
-    }
+      <li>
+        <a routerLink="transactions" routerLinkActive="active">Transactions</a>
+      </li>
+      @if(isAdmin()){
+        <li>
+          <a routerLink="admin-panel" routerLinkActive="active">Admin panel</a>
+        </li>
+      }
 
-    <li>
-      <p-button label="Sign out" severity="danger" (click)="signout()"/>
-    </li>
-  </ul>
-</nav>
+      <li>
+        <p-button label="Sign out" severity="danger" (click)="signout()"/>
+      </li>
+    </ul>
+  </nav>
+</header>
+
