--- a/src/app/components/transactions/add-transaction/add-transaction.component.html
+++ b/src/app/components/transactions/add-transaction/add-transaction.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="field">
     <label for="timeAndDate">Time and Date</label>
-    <p-datepicker  id="timeAndDate"  name="timeAndDate" formControlName="timeAndDate" placeholder="Time and Date" p class="w-full p-2 datepicker" />
+    <p-datepicker id="timeAndDate"  name="timeAndDate" formControlName="timeAndDate" placeholder="Time and Date"  class="datepicker" />
   </div>
   <div class="field">
     <label for="amountSpent">Amount spent</label>
