--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-// @import "primeicons/primeicons.css";
+@import "primeicons/primeicons.css";
 
 :root {
   --header-bg-color: rgb(6, 181, 181);
@@ -23,7 +23,7 @@ body {
   background-color: #eee;
 }
 
-body{
+body {
   display: flex;
   flex-direction: column;
 }
@@ -81,7 +81,7 @@ header {
   min-width: 20rem;
   max-width: 30rem;
 
-  .signin__form{
+  .signin__form {
     transform: translateY(-50%);
   }
 
@@ -143,50 +143,57 @@ p-dialog {
   }
 }
 
-.table{
+.table {
+  table {
+    width: 95%;
+    border-collapse: collapse;
+    margin-top: 2rem;
+    margin: 2rem auto;
 
-table {
-  width: 95%;
-  border-collapse: collapse;
-  margin-top: 2rem;
-  margin: 2rem auto;
-
-  thead{
-    background-color: var(--header-bg-color);
-  }
-
-  .actions {
-    display: inline-flex;
-    justify-content: flex-end;
-  }
-
-  th,
-  td {
-    border: 1px solid gray;
-  }
-
-  th{
-    padding: 0.5rem;
-    background-color: var();
-  }
-
-  td{
-    padding: 0.2rem 0.6rem;
-
-    :last-child{
-
-      margin-left: 0.6rem;
+    thead {
+      background-color: var(--header-bg-color);
     }
 
-    &:last-child{
-      width: 15%;
-      text-align: right;
+    .actions {
+      display: inline-flex;
+      justify-content: flex-end;
+      align-items: center;
+
+      i:hover{
+        cursor: pointer;
+        opacity: 0.8;
+      }
+    }
+
+    th,
+    td {
+      border: 1px solid gray;
+    }
+
+    th {
+      padding: 0.5rem;
+      background-color: var();
+    }
+
+    td {
+      padding: 0.2rem 0.6rem;
+
+      :last-child {
+        margin-left: 0.6rem;
+
+        span{
+          margin: 0;
+        }
+      }
+
+      &:last-child {
+        width: 15%;
+        text-align: right;
+      }
     }
   }
 }
-
-}
-app-root{
+app-root {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -206,8 +213,8 @@ app-transactions {
   padding: 1rem;
   min-width: 95vw;
 
-  p-button{
+  p-button {
     align-self: flex-start;
+    text-align: center;
   }
-
 }
